tests/toylang/pos/000060_cdrc2.toylang
program a = { if(a) then while a do sleep; } .
