tests/toylang/neg/000155_mutation.toylang
program a = {) a do sleep; } .
